# sql-market-analysis-case-study

./: README.md  main.py  mainapp.py  pyproject.toml  requirements.txt  sql_case_study.ipynb
