[project]
name = "sql-market-analysis-case-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
package-mode = false
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "squarify>=0.4.4",
    "streamlit>=1.46.0",
]
